# gen3_etl

./: .gitignore  README.md
elasticsearch/: README.md  pyproject.toml  pyproject.toml.bk  requirements.txt
elasticsearch/etl/: build_json.py  create_es_dd_mapping.py  create_file.py  create_index.py  etl.py  load.py  manual_ES_to_DD_values.py  pip_list_20220808.txt  transform.py
graph/: README.md  generate.sh  pyproject.toml  requirements.txt
graph/operations/: etl.py  get_gmkf_data.py  get_idc_data.py  get_nationwide_tissue_bank_data.py  get_target_data.py  load.py  refresh_nationwide_tissue_bank_data.sh  update_data.py  update_data_2.py
graph/operations/external_data/: get_cds_data.py
graph/portal_record_remover/: portal_record_remover.py
graph/utility_scripts/: delete_old_project_and_nodes.py  delete_test.py  find_duplicates.py  load_external_tmp.py  load_missing_record.py  merge.py  person_subject_ids.py
