[tool.poetry]
name = "gen3_etl"
version = "0.1.9"
description = "PCDC Gen3 ETL Scripts"
authors = ["PCDC UChicago <lgraglia@uchicago.edu>"]
readme = "README.md"


[tool.poetry.dependencies]
elasticsearch = "6.3.1"
elasticsearch-dsl = "6.2.1"
configuration-files = { git = "https://github.com/chicagopcdc/configuration-files.git", branch = "pcdc_dev" }


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


