[tool.poetry]
name = "gen3_etl"
version = "0.1.9"
description = "PCDC Gen3 ETL Scripts"
authors = ["PCDC UChicago <lgraglia@uchicago.edu>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">3.8,<=3.10"
elasticsearch = "6.3.1"
elasticsearch-dsl = "6.2.1"
requests = "*"
python-dotenv = "*"
gen3 = "4.5.0"
fastavro = "^1.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


