[tool.poetry]
name = "graph"
version = "0.1.0"
description = ""
authors = ["paulmurdoch19 <paulmurdoch19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
python-dotenv = "*"
gen3 = "4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
